--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20388],[[4,5,6,0,[],[1,40,20343],[[7,8,9,0,[],[1,51,20321],[],[[10,0,0,[],[1,594,19772],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17881],[[4,5,6,0,[],[1,101,17770],[[7,8,9,10,[],[1,110,17750],[],[[11,0,12,[13],[1,543,17309],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*AutomationExercise","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\AutomationExercise.robot","*../Test/AutomationExercise.robot","*test01"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*Ebay","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay.robot","*../Test/Ebay.robot","*<p>Basic search Functionality\x3c/p>","*Verify basic search functionality for ebay","*<p>this test verifies the basic search for ebay\x3c/p>","*functional"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.AutomationExercise","name":"AutomationExercise","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:17","fail":0,"label":"functional","pass":1,"skip":0}],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.Ebay","name":"Ebay","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672002235108;
+window.output["baseMillis"] = 1672048797160;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20423;
+window.output["generated"] = 17908;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
