--- a/results/log.html
+++ b/results/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,20388],[[4,5,6,0,[],[1,40,20343],[[7,8,9,0,[],[1,51,20321],[],[[10,0,0,[],[1,594,19772],[[0,11,12,0,13,14,0,0,[1,597,12096],[[599,2,15]]],[0,16,12,0,17,0,0,0,[1,12694,136],[]],[0,18,19,0,20,21,0,0,[1,12832,3004],[[15835,2,22]]],[0,23,12,0,24,25,0,0,[1,15840,28],[]],[0,26,12,0,27,25,0,0,[1,15868,108],[[15870,2,28]]],[0,18,19,0,20,29,0,0,[1,15984,2003],[[17986,2,30]]],[0,31,12,0,32,0,0,0,[1,17990,2373],[]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,17881],[[4,5,6,0,[],[1,101,17770],[[7,8,9,10,[],[1,110,17750],[],[[11,0,12,[13],[1,543,17309],[[0,14,0,0,0,0,0,0,[1,545,7211],[[0,15,16,0,17,18,0,0,[1,547,7058],[[549,2,19]]],[0,20,16,0,21,0,0,0,[1,7606,146],[]],[0,22,16,0,23,24,0,0,[1,7752,3],[]]]],[0,25,0,0,0,0,0,0,[1,7757,5512],[[0,26,16,0,27,28,0,0,[1,7758,246],[[7759,2,29]]],[0,30,16,0,31,32,0,0,[1,8005,5178],[[8007,2,33],[12891,2,34]]],[0,35,16,0,36,37,0,0,[1,13183,86],[[13268,2,38]]]]],[0,39,0,0,0,0,0,0,[1,13271,4579],[[0,40,41,0,42,43,0,0,[1,13272,2002],[[15273,2,44]]],[0,45,16,0,46,0,0,0,[1,15274,2575],[]]]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*AutomationExercise","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\AutomationExercise.robot","*../Test/AutomationExercise.robot","*test01","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BaseUrl}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://automationexercise.com/\">https://automationexercise.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*Get WebElement","*<p>Returns the first WebElement matching the given <code>locator\x3c/code>.\x3c/p>","*${testElement1}","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '//*[text()=' Test Cases']'.","*2s","*Slept 2 seconds","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*Ebay","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay.robot","*../Test/Ebay.robot","*<p>Basic search Functionality\x3c/p>","*Verify basic search functionality for ebay","*<p>this test verifies the basic search for ebay\x3c/p>","*functional","*Starting test case","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${link to go}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.ebay.com/\">https://www.ebay.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*10 seconds","*Verify search results","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${searchBox}, mobile","*Typing text 'mobile' into text field '//input[@placeholder='Search for anything']'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*${submit button}, Return","*Sending key(s) ('Return',) to //input[@id='gh-btn'] element.","*Sending keys Return","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*${text}","*Current page contains text '40,000+ results for mobile'.","*Tear down the test","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2s","*Slept 2 seconds","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:20","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:20","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.AutomationExercise","name":"AutomationExercise","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:17","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:17","fail":0,"label":"functional","pass":1,"skip":0}],[{"elapsed":"00:00:18","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.Ebay","name":"Ebay","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672002235108;
+window.output["baseMillis"] = 1672048797160;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 20423;
+window.output["generated"] = 17908;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
