--- a/results/log.html
+++ b/results/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,14517],[[4,5,6,0,[],[1,42,14469],[[7,8,9,10,[],[1,50,14451],[],[[11,0,12,[13],[1,407,14086],[[1,14,15,0,0,0,0,0,[1,409,5621],[[0,16,17,0,18,19,0,0,[1,410,5502],[[411,2,20]]],[0,21,17,0,22,0,0,0,[1,5913,114],[]],[0,23,17,0,24,25,0,0,[1,6028,2],[]]]],[0,26,27,0,0,0,0,0,[1,6031,4116],[[0,28,17,0,29,30,0,0,[1,6032,241],[[6034,2,31]]],[0,32,17,0,33,34,0,0,[1,6274,3823],[[6276,2,35],[9811,2,36]]],[0,37,17,0,38,39,0,0,[1,10098,49],[[10146,2,40]]]]],[2,41,15,0,0,0,0,0,[1,10149,4343],[[0,42,43,0,44,45,0,0,[1,10150,2002],[[12151,2,46]]],[0,47,17,0,48,0,0,0,[1,12153,2338],[]]]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11301],[[4,5,6,0,[],[1,42,11255],[[7,8,9,0,[],[1,51,11241],[],[[10,0,0,[],[1,1076,10214],[[1,11,12,0,13,14,0,0,[1,1078,5598],[[1080,2,15]]],[0,16,12,0,17,0,0,0,[1,6677,118],[]],[0,18,19,0,0,0,0,0,[1,6795,4381],[[0,20,12,0,21,22,0,0,[1,6797,1376],[[6798,2,23]]],[0,24,25,0,26,27,0,0,[1,8174,3002],[[11175,2,28]]]]],[0,29,30,0,0,0,0,0,[1,11178,111],[[0,31,32,0,33,0,34,0,[1,11179,4],[[11182,2,35]]],[0,36,12,0,37,38,0,0,[1,11184,104],[[11187,2,39]]]]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*Ebay","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay.robot","*../Test/Ebay.robot","*<p>Basic search Functionality\x3c/p>","*Verify basic search functionality for ebay","*<p>this test verifies the basic search for ebay\x3c/p>","*functional","*Starting test case","*CommonFunctionality","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${link to go}, chrome","*Opening browser 'chrome' to base url '<a href=\"https://www.ebay.com/\">https://www.ebay.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Set Selenium Implicit Wait","*<p>Sets the implicit wait value used by Selenium.\x3c/p>","*10 seconds","*Verify search results","*EbayUserDefinedKeywords","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${searchBox}, mobile","*Typing text 'mobile' into text field '//input[@placeholder='Search for anything']'.","*Press Keys","*<p>Simulates the user pressing key(s) to an element or on the active browser.\x3c/p>","*${submit button}, Return","*Sending key(s) ('Return',) to //input[@id='gh-btn'] element.","*Sending keys Return","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*${text}","*Current page contains text 'results for mobile'.","*Tear down the test","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2s","*Slept 2 seconds","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*GalaFurniture","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\GalaFurniture.robot","*../Test/GalaFurniture.robot","*Create a new account","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"https://www.galafurn.com/\">https://www.galafurn.com/\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Click the create link","*HomePage","*Click Link","*<p>Clicks a link identified by <code>locator\x3c/code>.\x3c/p>","*${createAccountLink}","*Clicking link '(//a[@id='customer_register_link'])[1]'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3s","*Slept 3 seconds","*Uyelik formunu doldur","*RegisteredPage","*Name","*FakerLibrary","*<p>:example 'John Doe'\x3c/p>","*${fake}","*${fake} = Carolyn Holland","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${firstname}, faruk","*Typing text 'faruk' into text field '//input[@id='FirstName']'."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:14","fail":0,"label":"functional","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.Ebay","name":"Ebay","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.GalaFurniture","name":"GalaFurniture","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672067306109;
+window.output["baseMillis"] = 1672085980219;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14548;
+window.output["generated"] = 11326;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
