--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,14517],[[4,5,6,0,[],[1,42,14469],[[7,8,9,10,[],[1,50,14451],[],[[11,0,12,[13],[1,407,14086],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11301],[[4,5,6,0,[],[1,42,11255],[[7,8,9,0,[],[1,51,11241],[],[[10,0,0,[],[1,1076,10214],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*Ebay","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay.robot","*../Test/Ebay.robot","*<p>Basic search Functionality\x3c/p>","*Verify basic search functionality for ebay","*<p>this test verifies the basic search for ebay\x3c/p>","*functional"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*GalaFurniture","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\GalaFurniture.robot","*../Test/GalaFurniture.robot","*Create a new account"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:14","fail":0,"label":"functional","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.Ebay","name":"Ebay","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.GalaFurniture","name":"GalaFurniture","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672067306109;
+window.output["baseMillis"] = 1672085980219;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14548;
+window.output["generated"] = 11326;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
