--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11301],[[4,5,6,0,[],[1,42,11255],[[7,8,9,0,[],[1,51,11241],[],[[10,0,0,[],[1,1076,10214],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,16649],[[4,5,6,0,[],[0,51,16593],[[7,8,9,0,[],[0,61,16578],[],[[10,0,0,[],[0,1095,15541,11],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]]],[],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*GalaFurniture","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\GalaFurniture.robot","*../Test/GalaFurniture.robot","*Create a new account"]);
+window.output["strings"] = window.output["strings"].concat(["*","*RobotFrameWorkApp","*C:\\Asoftware\\RobotFrameWorkApp","*..","*Test","*C:\\Asoftware\\RobotFrameWorkApp\\Test","*../Test","*GalaFurniture","*C:\\Asoftware\\RobotFrameWorkApp\\Test\\GalaFurniture.robot","*../Test/GalaFurniture.robot","*Create a new account","*Element with locator '.wrapper #customer_logout_link' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:11","fail":0,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.GalaFurniture","name":"GalaFurniture","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:17","fail":1,"id":"s1","label":"RobotFrameWorkApp","name":"RobotFrameWorkApp","pass":0,"skip":0},{"elapsed":"00:00:17","fail":1,"id":"s1-s1","label":"RobotFrameWorkApp.Test","name":"Test","pass":0,"skip":0},{"elapsed":"00:00:17","fail":1,"id":"s1-s1-s1","label":"RobotFrameWorkApp.Test.GalaFurniture","name":"GalaFurniture","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672085980219;
+window.output["baseMillis"] = 1672089275358;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11326;
+window.output["generated"] = 16677;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
