--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,14605],[],[[5,0,6,[7],[1,125,14480],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,1,0,[],[1,0,59604],[[3,4,5,0,[],[1,27,20115],[],[[6,0,0,[],[1,157,19985],[]]],[],[1,1,0,0]],[7,8,9,10,[],[1,20142,14252],[],[[11,0,12,[13],[1,20158,14222],[]]],[],[1,1,0,0]],[14,15,16,10,[],[1,34402,25202],[],[[17,0,18,[13],[1,34405,25199],[]]],[],[1,1,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ebay filter Search","*C:\\ZLenovo\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay_filter_Search.robot","*Test/Ebay_filter_Search.robot","*<p>Basic search Functionality\x3c/p>","*Ebay fiter test","*<p>This test case verify the filtered data\x3c/p>","*functional"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\ZLenovo\\Asoftware\\RobotFrameWorkApp\\Test","*AutomationExercise","*C:\\ZLenovo\\Asoftware\\RobotFrameWorkApp\\Test\\AutomationExercise.robot","*Test/AutomationExercise.robot","*test01","*Ebay","*C:\\ZLenovo\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay.robot","*Test/Ebay.robot","*<p>Basic search Functionality\x3c/p>","*Verify basic search functionality for ebay","*<p>this test verifies the basic search for ebay\x3c/p>","*functional","*Ebay filter Search","*C:\\ZLenovo\\Asoftware\\RobotFrameWorkApp\\Test\\Ebay_filter_Search.robot","*Test/Ebay_filter_Search.robot","*Ebay fiter test","*<p>This test case verify the filtered data\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:14","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:00:14","fail":0,"label":"functional","pass":1,"skip":0}],[{"elapsed":"00:00:15","fail":0,"id":"s1","label":"Ebay filter Search","name":"Ebay filter Search","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:59","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:39","fail":0,"label":"functional","pass":2,"skip":0}],[{"elapsed":"00:01:00","fail":0,"id":"s1","label":"Test","name":"Test","pass":3,"skip":0},{"elapsed":"00:00:20","fail":0,"id":"s1-s1","label":"Test.AutomationExercise","name":"AutomationExercise","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s2","label":"Test.Ebay","name":"Ebay","pass":1,"skip":0},{"elapsed":"00:00:25","fail":0,"id":"s1-s3","label":"Test.Ebay filter Search","name":"Ebay filter Search","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1684068191223;
+window.output["baseMillis"] = 1684074653099;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 14620;
+window.output["generated"] = 59635;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
